--- a/EduPage.html
+++ b/EduPage.html
@@ -19,18 +19,19 @@
             <tr><h3>Secondary Schooling Certificate</h3></tr>
             <tr><b><i>SAV High School 2017</i></b></tr>
         </table>
-        <ul>
-            <li><b>Certification Courses:</b></li>
-                Video Game Development: 
-                XAMK Open University (IVGC) – Finland | August 2021 – July 2022
-                DevOps on AWS Specialization: (1/4 Courses) 
-                Coursera | 2022 (On-going)
-                IBM & Darden Digital Strategy Specialization: (2/6 Courses) 
-                Coursera | 2022 (On-going)
-                Google Data Analytics Professional Certificate: (1/8 Courses) 
-                Coursera | 2022 (On-going)
-                Internet of things 101: 
-                Infosys springboard | 2022 (On-going)
+        <hr>
+        <h2><i><u>Certification Courses:</u></i></h2>
+        <ul>    <li><b>Video Game Development:</b></li>
+                    -From XAMK Open University (IVGC) –<i>Finland</i><br>
+                    -August 2021 to July 2022<br><br>
+                <li><b>DevOps on AWS Specialization: (1/4 Courses)</b></li> 
+                    -From Coursera | 2022 (On-going)<br><br>
+                <li><b>IBM & Darden Digital Strategy Specialization: (2/6 Courses)</b></li>
+                    -From Coursera | 2022 (On-going)<br><br>
+                <li><b>Google Data Analytics Professional Certificate: (1/8 Courses)</b></li>
+                    -From Coursera | 2022 (On-going)<br><br>
+                <li><b>Internet of things 101:</b></li>
+                    -From Infosys springboard | 2022 (On-going)
         </ul>
     </body>
 </html>
