New CSS changes

--- a/EduPage.html
+++ b/EduPage.html
@@ -2,7 +2,7 @@
 <html>
     <body>
         <nav align="center">
-            <button><a href="ExpPage.html">EXPERIENCE</a></button>
+            <button class=""><a href="ExpPage.html">EXPERIENCE</a></button>
             <button><a href="EduPage.html">EDUCATION</a></button>
             <button><a href="SkillsPage.html">SKILLS</a></button>
             <button><a href="AchPage.html">ACHIEVEMENTS</a></button>
@@ -12,12 +12,12 @@
         <table>
             <tr><h1 align="center">EDUCATION</h1></tr>
             <hr>
-            <tr><h3>BTech- Computer Science and Engineering<sub>(Pursuing)</sub></h3></tr>
-            <tr><b><i>St Mary's Engineering College 2019-2023 Affiliated to JNTUH</i></b></tr>
-            <tr><h3>Intermediate MPC</h3></tr>
-            <tr><b><i>Sri Gayatri Junior College 2017-2019 </i></b></tr>
-            <tr><h3>Secondary Schooling Certificate</h3></tr>
-            <tr><b><i>SAV High School 2017</i></b></tr>
+                <tr><h3>BTech- Computer Science and Engineering<sub>(Pursuing)</sub></h3></tr>
+                <tr><b><i>St Mary's Engineering College 2019-2023 Affiliated to JNTUH</i></b></tr>
+                <tr><h3>Intermediate MPC</h3></tr>
+                <tr><b><i>Sri Gayatri Junior College 2017-2019 </i></b></tr>
+                <tr><h3>Secondary Schooling Certificate</h3></tr>
+                <tr><b><i>SAV High School 2017</i></b></tr>
         </table>
         <hr>
         <h2><i><u>Certification Courses:</u></i></h2>
