--- a/EduPage.html
+++ b/EduPage.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+        <link href="EduStyle.css" rel="stylesheet"/>
+        <meta charset="utl-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title> Education Details </title>
+    </head>
     <body>
-        <nav align="center">
-            <button class=""><a href="ExpPage.html">EXPERIENCE</a></button>
-            <button><a href="EduPage.html">EDUCATION</a></button>
-            <button><a href="SkillsPage.html">SKILLS</a></button>
-            <button><a href="AchPage.html">ACHIEVEMENTS</a></button>
-            <button><a href="HobPage.html">HOBBIES</a></button>
-            <button><a href="ProPage.html">PROJECTS</a></button>
+     <div>
+      <header class="heading">
+        <nav>
+            <button class="cat"><a href="ExpPage.html">Experience</a></button>
+            <button class="cat"><a href="EduPage.html">Education</a></button>
+            <button class="cat"><a href="SkillsPage.html">Skills</a></button>
+            <button class="cat"><a href="AchPage.html">Achievements</a></button>
+            <button class="cat"><a href="HobPage.html">Hobbies</a></button>
+            <button class="cat"><a href="ProPage.html">Projects</a></button>
         </nav>
+      </header>
+      <main>
         <table>
-            <tr><h1 align="center">EDUCATION</h1></tr>
+            <tr class="pagetitle"><h1 align="center">EDUCATION</h1></tr>
             <hr>
-                <tr><h3>BTech- Computer Science and Engineering<sub>(Pursuing)</sub></h3></tr>
+                <tr><h3><u class="edulevel">BTech- Computer Science and Engineering(Pursuing)</u></h3></tr>
                 <tr><b><i>St Mary's Engineering College 2019-2023 Affiliated to JNTUH</i></b></tr>
                 <tr><h3>Intermediate MPC</h3></tr>
                 <tr><b><i>Sri Gayatri Junior College 2017-2019 </i></b></tr>
@@ -33,5 +43,7 @@
                 <li><b>Internet of things 101:</b></li>
                     -From Infosys springboard | 2022 (On-going)
         </ul>
+      </main>
+     </div>
     </body>
 </html>
