--- a/EduPage.html
+++ b/EduPage.html
@@ -19,30 +19,45 @@
         </nav>
       </header>
       <main>
-        <table>
-            <tr class="pagetitle"><h1 align="center">EDUCATION</h1></tr>
-            <hr>
-                <tr><h3><u class="edulevel">BTech- Computer Science and Engineering(Pursuing)</u></h3></tr>
-                <tr><b><i>St Mary's Engineering College 2019-2023 Affiliated to JNTUH</i></b></tr>
-                <tr><h3>Intermediate MPC</h3></tr>
-                <tr><b><i>Sri Gayatri Junior College 2017-2019 </i></b></tr>
-                <tr><h3>Secondary Schooling Certificate</h3></tr>
-                <tr><b><i>SAV High School 2017</i></b></tr>
-        </table>
+       <div class="info">
+        <h1 align="center">EDUCATION</h1>
         <hr>
-        <h2><i><u>Certification Courses:</u></i></h2>
+            <h3><u class="edulevel">BTech- Computer Science and Engineering(Pursuing)</u></h3>
+            <b>St Mary's Engineering College 2019-2023 <br>Affiliated to JNTU-Hyderabad </b>
+            <p>-Academic Excellence in Information Science, English and Mathematics.<br>
+                -Good Performance in social and cultural activities.<br>
+                -Current CGPA= 6.46
+            </p>
+            <h3><u class="edulevel">Intermediate (12th)</u></h3>
+            <b><i>Sri Gayatri Junior College 2017-2019 </i></b>
+            <p>-Gained extensive training and accomplished all courses.<br>
+                -Passed out with 88.3%. 
+            </p>
+            <h3><u class="edulevel">Secondary Schooling Certificate(10th)</u></h3>
+            <b><i>SAV High School 2017</i></b>
+            <p>-Finished basic schooling and further skills improvement.<br>
+                -Passed out with a 9.3 GPA 
+            </p>
+        <hr>
+        <div class="cert">
+        <h2><i><u>Other Certification Courses:</u></i></h2>
         <ul>    <li><b>Video Game Development:</b></li>
-                    -From XAMK Open University (IVGC) –<i>Finland</i><br>
-                    -August 2021 to July 2022<br><br>
+                    <p>-From XAMK Open University (IVGC) –<i>Finland</i><br>
+                       -August 2021 to July 2022<br>
+                    </p>
                 <li><b>DevOps on AWS Specialization: (1/4 Courses)</b></li> 
-                    -From Coursera | 2022 (On-going)<br><br>
+                    <p>-From Coursera | 2022 (On-going)<br>
+                       -Cloud Computing and further knowledge acquired.
+                    </p>
                 <li><b>IBM & Darden Digital Strategy Specialization: (2/6 Courses)</b></li>
-                    -From Coursera | 2022 (On-going)<br><br>
+                    <p>-From Coursera | 2022 (On-going)<br>
+                       -Artificial intelligence and Machine learning basics acquired.
+                    </p>
                 <li><b>Google Data Analytics Professional Certificate: (1/8 Courses)</b></li>
-                    -From Coursera | 2022 (On-going)<br><br>
-                <li><b>Internet of things 101:</b></li>
-                    -From Infosys springboard | 2022 (On-going)
+                    <p>-From Coursera | 2022 (On-going)<br></p>
         </ul>
+        </div>
+       </div>
       </main>
      </div>
     </body>
