CSS files linked and education page done

--- a/EduPage.html
+++ b/EduPage.html
@@ -10,17 +10,17 @@
      <div>
       <header class="heading">
         <nav>
-            <button class="cat"><a href="ExpPage.html">Experience</a></button>
-            <button class="cat"><a href="EduPage.html">Education</a></button>
-            <button class="cat"><a href="SkillsPage.html">Skills</a></button>
-            <button class="cat"><a href="AchPage.html">Achievements</a></button>
-            <button class="cat"><a href="HobPage.html">Hobbies</a></button>
-            <button class="cat"><a href="ProPage.html">Projects</a></button>
+            <a class="cat" href="ExpPage.html">Experience</a>
+            <a class="cat" href="EduPage.html">Education</a>
+            <a class="cat" href="SkillsPage.html">Skills</a>
+            <a class="cat" href="AchPage.html">Achievements</a>
+            <a class="cat" href="HobPage.html">Hobbies</a>
+            <a class="cat" href="ProPage.html">Projects</a>
         </nav>
       </header>
       <main>
        <div class="info">
-        <h1 align="center">EDUCATION</h1>
+        <p class="tit">EDUCATION</p>
         <hr>
             <h3><u class="edulevel">BTech- Computer Science and Engineering(Pursuing)</u></h3>
             <b>St Mary's Engineering College 2019-2023 <br>Affiliated to JNTU-Hyderabad </b>
