--- a/Embeded.html
+++ b/Embeded.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utl-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title> Embeded</title>
+        <link href="EmbededStyle.css" rel="stylesheet" />
+    </head>
     <body>
         <nav align="center">
-            <button><a href="ExpPage.html">EXPERIENCE</a></button>
-            <button><a href="EduPage.html">EDUCATION</a></button>
-            <button><a href="SkillsPage.html">SKILLS</a></button>
-            <button><a href="AchPage.html">ACHIEVEMENTS</a></button>
-            <button><a href="HobPage.html">HOBBIES</a></button>
-            <button><a href="ProPage.html">PROJECTS</a></button>
+            <a href="ExpPage.html">EXPERIENCE</a>
+            <a href="EduPage.html">EDUCATION</a>
+            <a href="SkillsPage.html">SKILLS</a>
+            <a href="AchPage.html">ACHIEVEMENTS</a>
+            <a href="HobPage.html">HOBBIES</a>
+            <a href="ProPage.html">PROJECTS</a>
         </nav>
     </body>
 </html>
