--- a/ExpPage.html
+++ b/ExpPage.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utl-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title> Experiences page </title>
+        <link href="ExpStyle.css" rel="stylesheet" />
     </head>
     <body>
         <nav align="center">
