--- a/Home.html
+++ b/Home.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utl-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Gopala Krishna D | Personal Website </title>
+        <link rel="stylesheet" href="Homestyle.css" />
     </head>
     <body>
-        <h3> Hi, I am</h3>
-        <h1 align="center">D. Gopala Krishna<footer><small>Software Engineer<i>(Student)</i></small></footer></h1>
-       
+        <header>
+        <h2> Hi, I am</h2>
+        <h1>D. Gopala Krishna</h1>
+        <h1>Software Engineer<i>(Student)</i></small></footer></h1>
+        </header>
         <hr>
         <p><b>Personal Profile:</b><br><i>I am a BTech student in the Computer Science field. My main focus is to serve as a good asset to a 
             reputed company. I am flexible, reliable and possess excellent time-keeping skills.
