--- a/HobPage.html
+++ b/HobPage.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+        <meta charset="utl-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Hobbies Page</title>
+        <link href="HobStyle.css" rel="stylesheet" />
+    </head>
     <body>
         <nav align="center">
             <button><a href="ExpPage.html">EXPERIENCE</a></button>
