--- a/ProPage.html
+++ b/ProPage.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utl-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0 " />
+        <title>Projects Page</title>
+        <link href="ProjStyle.css" rel="stylesheet" />
+    </head>
     <body>
         <nav align="center">
             <button><a href="ExpPage.html">EXPERIENCE</a></button>
