--- a/EduPage.html
+++ b/EduPage.html
@@ -8,7 +8,7 @@
     </head>
     <body>
      <div>
-      <header class="heading">
+      <header>
         <nav>
             <a class="cat" href="ExpPage.html">Experience</a>
             <a class="cat" href="EduPage.html">Education</a>
