--- a/Embeded.html
+++ b/Embeded.html
@@ -7,13 +7,15 @@
         <link href="EmbededStyle.css" rel="stylesheet" />
     </head>
     <body>
-        <nav align="center">
-            <a href="ExpPage.html">EXPERIENCE</a>
-            <a href="EduPage.html">EDUCATION</a>
-            <a href="SkillsPage.html">SKILLS</a>
-            <a href="AchPage.html">ACHIEVEMENTS</a>
-            <a href="HobPage.html">HOBBIES</a>
-            <a href="ProPage.html">PROJECTS</a>
+      <header>
+        <nav>
+            <a class="cat" href="ExpPage.html">Experience</a>
+            <a class="cat" href="EduPage.html">Education</a>
+            <a class="cat" href="SkillsPage.html">Skills</a>
+            <a class="cat" href="AchPage.html">Achievements</a>
+            <a class="cat" href="HobPage.html">Hobbies</a>
+            <a class="cat" href="ProPage.html">Projects</a>
         </nav>
+      </header>
     </body>
 </html>
