--- a/HobPage.html
+++ b/HobPage.html
@@ -7,14 +7,16 @@
         <link href="HobStyle.css" rel="stylesheet" />
     </head>
     <body>
-        <nav align="center">
-            <button><a href="ExpPage.html">EXPERIENCE</a></button>
-            <button><a href="EduPage.html">EDUCATION</a></button>
-            <button><a href="SkillsPage.html">SKILLS</a></button>
-            <button><a href="AchPage.html">ACHIEVEMENTS</a></button>
-            <button><a href="HobPage.html">HOBBIES</a></button>
-            <button><a href="ProPage.html">PROJECTS</a></button>
+      <header>
+        <nav>
+            <a class="cat" href="ExpPage.html">Experience</a>
+            <a class="cat" href="EduPage.html">Education</a>
+            <a class="cat" href="SkillsPage.html">Skills</a>
+            <a class="cat" href="AchPage.html">Achievements</a>
+            <a class="cat" href="HobPage.html">Hobbies</a>
+            <a class="cat" href="ProPage.html">Projects</a>
         </nav>
+      </header>
         <h1 align="center">Hobbies & Interests</h1>
             <p> Photography<br>
                 Story writing<br>
