--- a/Home.html
+++ b/Home.html
@@ -11,19 +11,20 @@
         <h2> Hi, I am</h2>
         <h1>D. Gopala Krishna</h1>
         <h1>Software Engineer<i>(Student)</i></small></footer></h1>
-        </header>
         <hr>
         <p><b>Personal Profile:</b><br><i>I am a BTech student in the Computer Science field. My main focus is to serve as a good asset to a 
             reputed company. I am flexible, reliable and possess excellent time-keeping skills.
             I am an enthusiastic, self-motivated and hardworking person. I work well in a team environment and also 
-            using my own initiative.</i></p>
+            using my own initiative.</i></p><br><br><br><br><br><br><br><br>
+        </header>
         <hr>
-            <iframe width="1000" height="500" src="Embeded.html" align="center"></iframe>
-        <hr>
-            <h5 align="center"> Remember, you can have anything you desire ;)</h5>
+        <main>
+            <iframe width="1500" height="1000" src="Embeded.html" alt="A box showing different pages of "></iframe>
+        </main>
+        </hr>
+            <h5 align="center"> Remember, you can have anything you desire for.</h5>
             <h3>Contact info.</h3>
             <p align="center"> E-Mail: gopalakrishna.1d@gmail.com <br>
-
                 LinkedIn: <a href="https://www.linkedin.com/in/gopala-krishna-d-5516701b3/" target="_blank">@gopala-krishna-d</a></p>
     </body>
 </html>
