--- a/AchPage.html
+++ b/AchPage.html
@@ -17,17 +17,26 @@
             <a class="cat" href="ProPage.html">Projects</a>
         </nav>
       </header>
+      <main>
         <h1 align="center"> Achievements</h1>
         <h4><u>Hackathons</u></h4>
-        <p><b>1. Organized by Power-To-Fly & Sponsored by American Expressq</b><br>
-            -May 2022<br>
+        <p><b>1. Organized by Power-To-Fly & Sponsored by American Expressq</b></p>
+           <p> -May 2022<br>
             -Won in a mini event and won.<br>
             -Learnt about quick planning and execution.<br>
-            <br>
+            </p>
+            <p>
             <hr>
             <b>Participated in cultural activities in School and College level.</b><br>
             -Appreciated for volunteering and active participation.<br>
             -Have experimented with anchoring skills and hosting events.
-
-    </body>
+             </p>
+             <br>
+            <br><br>
+            <br><br>
+            <br><br>
+            <br><br>
+            <br>
+        </main>
+      </body>
 </html>
