--- a/EduPage.html
+++ b/EduPage.html
@@ -7,7 +7,6 @@
         <title> Education Details </title>
     </head>
     <body>
-     <div>
       <header>
         <nav>
             <a class="cat" href="ExpPage.html">Experience</a>
@@ -20,8 +19,9 @@
       </header>
       <main>
        <div class="info">
-        <p class="tit">EDUCATION</p>
+        <h1 class="tit">EDUCATION</h1>
         <hr>
+            <h1><span><i>Formal Education</i></span></h1>
             <h3><u class="edulevel">BTech- Computer Science and Engineering(Pursuing)</u></h3>
             <b>St Mary's Engineering College 2019-2023 <br>Affiliated to JNTU-Hyderabad </b>
             <p>-Academic Excellence in Information Science, English and Mathematics.<br>
@@ -39,8 +39,9 @@
                 -Passed out with a 9.3 GPA 
             </p>
         <hr>
+        <h1><span><i>Informal Education</i></span></h1>
         <div class="cert">
-        <h2><i><u>Other Certification Courses:</u></i></h2>
+        <h2><i><u>Certification Courses:</u></i></h2>
         <ul>    <li><b>Video Game Development:</b></li>
                     <p>-From XAMK Open University (IVGC) –<i>Finland</i><br>
                        -August 2021 to July 2022<br>
@@ -59,6 +60,5 @@
         </div>
        </div>
       </main>
-     </div>
     </body>
 </html>
