--- a/HobPage.html
+++ b/HobPage.html
@@ -17,6 +17,7 @@
             <a class="cat" href="ProPage.html">Projects</a>
         </nav>
       </header>
+      <main>
         <h1 align="center">Hobbies & Interests</h1>
             <p> Photography<br>
                 Story writing<br>
@@ -29,5 +30,12 @@
                 Playing Video Games<br>
                 Interior Designing<br>
                 Career coaching</p>
+                <br>
+                <br><br>
+                <br><br>
+                <br><br>
+                <br><br>
+                <br>
+      </main>
     </body>
 </html>
