--- a/ProPage.html
+++ b/ProPage.html
@@ -17,6 +17,7 @@
             <a class="cat" href="ProPage.html">Projects</a>
         </nav>
       </header>
+      <main>
         <h1 align="center">Projects</h1>
             <h2>Budget App</h2>
             <p>
@@ -25,5 +26,12 @@
                 -Gives suggestions on how to save money, where to avoide wasting and
                  how else to save best.
             </p>
+            <br>
+            <br><br>
+            <br><br>
+            <br><br>
+            <br><br>
+            <br>
+        </main>
     </body>
 </html>
