--- a/SkillsPage.html
+++ b/SkillsPage.html
@@ -17,7 +17,10 @@
             <a class="cat" href="ProPage.html">Projects</a>
         </nav>
       </header>
-        <h1 align="center">Skills</h1>
+      <main class="info">
+        <div class="tit">
+        <h1 align="center">SKILLS</h1>
+        </div>
         <hr>
         <h3><u>Computer Skills</u></h3>
         <ol>
@@ -51,5 +54,13 @@
         -Telugu (5/5)<br>
         -Hindi (4.5/5)
        </p>
+       <br>
+            <br><br>
+            <br><br>
+            <br><br>
+            <br><br>
+            <br>
+        </main>
+      </main>
     </body>
 </html>
