--- a/1Home.html
+++ b/1Home.html
@@ -9,22 +9,32 @@
     <body>
         <header>
         <h2> Hi, I am</h2>
-        <h1>D. Gopala Krishna</h1>
+        <div class="name">
+            <p>hello<br><br><br><br><br><br><br><br></p>
+        </div>
         <h1>Software Engineer<i>(Student)</i></small></footer></h1>
         <hr>
-        <p><b>Personal Profile:</b><br><i>I am a BTech student in the Computer Science field. My main focus is to serve as a good asset to a 
+        <p class="profile"><b>Personal Profile:</b><br><i>I am a BTech student in the Computer Science field. My main focus is to serve as a good asset to a 
             reputed company. I am flexible, reliable and possess excellent time-keeping skills.
             I am an enthusiastic, self-motivated and hardworking person. I work well in a team environment and also 
             using my own initiative.</i></p><br><br><br><br><br><br><br><br>
         </header>
         <hr>
         <main>
-            <iframe width="1500" height="1000" src="Embeded.html" alt="A box showing different pages of "></iframe>
+          <div>
+            <iframe src="Embeded.html" alt="A box showing different pages of "> PORTFOLIO</iframe>
+          </div>
         </main>
         </hr>
             <h5 align="center"> Remember, you can have anything you desire for.</h5>
             <h3>Contact info.</h3>
             <p align="center"> E-Mail: gopalakrishna.1d@gmail.com <br>
                 LinkedIn: <a href="https://www.linkedin.com/in/gopala-krishna-d-5516701b3/" target="_blank">@gopala-krishna-d</a></p>
+                <br>
+                <br><br>
+                <br><br>
+                <br><br>
+                <br><br>
+                <br>
     </body>
 </html>
