--- a/ExpPage.html
+++ b/ExpPage.html
@@ -17,24 +17,33 @@
             <a class="cat" href="ProPage.html">Projects</a>
         </nav>
       </header>
-        <h1 align="center">I am a Software Engineer<sub><small>(Student)</small></sub></h1>
+      <main>
+        <div class="info">
+        <h1 align="center">I am a Computer Sciences Student</h1>
         <hr>
-        <h2>Technical Experience: <i>Fresher</i></h2>
+        <h2 class="exp"><span>EXPERIENCE<small>(Technical)</small>: <i>Fresher</i></span></h2><br><br>
         <hr>
-        <h1>Volunteering Experiences:</h1>
+        <h2 class="exp"><span>EXPERIENCE<small>(Volunteering)</small>:</span></h2>
         <h3><i><u>Teaching Intern</u></i></h3>
-         <p><b>Boddhi Tree Foundation (NGO) | Nov 2021 - Mar 2022</b></p>
+         <p><span><b>Boddhi Tree Foundation (NGO) | Nov 2021 - Mar 2022</b></span></p>
             <p> - I have learnt a lot about how to be a good teacher. 
-                My co inters have taught me how to work in a group 
+                My co-interns have taught me how to work in a group 
                 environment and handle stress.</p>
-            <p> - Teaching children of under privileged background gave me 
-                a different kind of satisfaction.
-                 I felt at peace as I was doing a selfless deed.</p>
+            <p> - Teaching children of under privileged background helped me feel at peace and satisfied.
+                I felt at peace as I was doing a selfless deed.</p>
         <h3><i><u>Graphic Design Intern</u></i></h3>
-         <p><b>CollegeTips.in | Mar 2022 - Apr 2022</b></p>
-            <p> - I have learnt how to deal with stress and meet deadlines.</p>
-            <p> - The work given was not hard but it was time consuming. 
+         <p><span><b>CollegeTips.in | Mar 2022 - Apr 2022</b></span></p>
+            <p>- I have learnt how to deal with stress and meet deadlines.</p>
+            <p>- The work given was not hard but it was time consuming. 
                 I did my best to give the quality output in the limited time.</p>
-            <P> - This internship has taught me work can be fun too.</P>
+            <P> - This internship has taught me that work can be fun too.</P>
+            <br>
+            <br><br>
+            <br><br>
+            <br><br>
+            <br><br>
+            <br>
+        </div>
+      </main>
     </body>
 </html>
