--- a/HobPage.html
+++ b/HobPage.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utl-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Hobbies Page</title>
-        <link href="HobStyle.css" rel="stylesheet" />
-    </head>
-    <body>
-      <header>
-        <nav>
-            <a class="cat" href="ExpPage.html">Experience</a>
-            <a class="cat" href="EduPage.html">Education</a>
-            <a class="cat" href="SkillsPage.html">Skills</a>
-            <a class="cat" href="AchPage.html">Achievements</a>
-            <a class="cat" href="HobPage.html">Hobbies</a>
-            <a class="cat" href="ProPage.html">Projects</a>
-        </nav>
-      </header>
-      <main>
-        <h1 align="center">Hobbies & Interests</h1>
-            <p> Photography<br>
-                Story writing<br>
-                Singing<br>
-                Playing Guitar<br>
-                Travelling<br>
-                Photo and Video Editing<br>
-                Listening to music<br>
-                Reading Books<br>
-                Playing Video Games<br>
-                Interior Designing<br>
-                Career coaching</p>
-                <br>
-                <br><br>
-                <br><br>
-                <br><br>
-                <br><br>
-                <br>
-      </main>
-    </body>
+  <head>
+    <meta charset="utl-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hobbies Page</title>
+    <link href="HobStyle.css" rel="stylesheet" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a class="cat" href="ExpPage.html">Experience</a>
+        <a class="cat" href="EduPage.html">Education</a>
+        <a class="cat" href="SkillsPage.html">Skills</a>
+        <a class="cat" href="AchPage.html">Achievements</a>
+        <a class="cat" href="HobPage.html">Hobbies</a>
+        <a class="cat" href="ProPage.html">Projects</a>
+      </nav>
+    </header>
+    <main>
+      <h1 align="center">Hobbies & Interests</h1>
+        <p>Photography<br>
+          Story writing<br>
+          Singing<br>
+          Playing Guitar<br>
+          Travelling<br>
+          Photo and Video Editing<br>
+          Listening to music<br>
+          Reading Books<br>
+          Playing Video Games<br>
+          Interior Designing<br>
+          Career coaching</p>
+        <br><br><br>
+            <br><br>
+            <br><br>
+            <br><br>
+        <button type="button"><a href="Hob2Page.html" target="_blank">CLICK HERE FOR FULL SCREEN</a></button>
+        <br>
+    </main>
+  </body>
 </html>
