--- a/Ach2Page.html
+++ b/Ach2Page.html
@@ -9,12 +9,12 @@
     <body>
       <header>
         <nav>
-            <a class="cat" href="ExpPage.html">Experience</a>
-            <a class="cat" href="EduPage.html">Education</a>
-            <a class="cat" href="SkillsPage.html">Skills</a>
-            <a class="cat" href="AchPage.html">Achievements</a>
-            <a class="cat" href="HobPage.html">Hobbies</a>
-            <a class="cat" href="ProPage.html">Projects</a>
+            <a class="cat" href="Exp2Page.html">Experience</a>
+            <a class="cat" href="Edu2Page.html">Education</a>
+            <a class="cat" href="Skills2Page.html">Skills</a>
+            <a class="cat" href="Ach2Page.html">Achievements</a>
+            <a class="cat" href="Hob2Page.html">Hobbies</a>
+            <a class="cat" href="Pro2Page.html">Projects</a>
         </nav>
       </header>
       <main>
@@ -37,11 +37,11 @@
             <br><br>
             <br><br>
             <br>
-        <button type="button"><a href="Ach2Page.html" target="_blank">CLICK HERE FOR FULL SCREEN</a></button>
-        <br><br>
+        <button type="button"><a href="1Home.html">CLICK HERE FOR HOME SCREEN</button>
+            <br><br>
             <br><br>
             <br><br>
             <br>
         </main>
-      </body>
+        </body>
 </html>
