--- a/Skills2Page.html
+++ b/Skills2Page.html
@@ -9,15 +9,15 @@
     <body>
       <header>
         <nav>
-            <a class="cat" href="ExpPage.html">Experience</a>
-            <a class="cat" href="EduPage.html">Education</a>
-            <a class="cat" href="SkillsPage.html">Skills</a>
-            <a class="cat" href="AchPage.html">Achievements</a>
-            <a class="cat" href="HobPage.html">Hobbies</a>
-            <a class="cat" href="ProPage.html">Projects</a>
+            <a class="cat" href="Exp2Page.html">Experience</a>
+            <a class="cat" href="Edu2Page.html">Education</a>
+            <a class="cat" href="Skills2Page.html">Skills</a>
+            <a class="cat" href="Ach2Page.html">Achievements</a>
+            <a class="cat" href="Hob2Page.html">Hobbies</a>
+            <a class="cat" href="Pro2Page.html">Projects</a>
         </nav>
       </header>
-      <main class="info">
+      <n class="info">
         <div class="tit">
         <h1 align="center">SKILLS</h1>
         </div>
@@ -60,8 +60,7 @@
             <br><br>
             <br><br>
             <br>
-      <button type="button"><a href="Skills2Page.html" target="_blank">CLICK HERE FOR FULL SCREEN</a></button>
-        </main>
+      <button type="button"><a href="1Home.html">CLICK HERE FOR HOME PAGE</a></button>
       </main>
     </body>
 </html>
