Completed home page

--- a/Skills2Page.html
+++ b/Skills2Page.html
@@ -17,6 +17,7 @@
             <a class="cat" href="Pro2Page.html">Projects</a>
         </nav>
       </header>
+      <main>
       <n class="info">
         <div class="tit">
         <h1 align="center">SKILLS</h1>
