--- a/1Home.html
+++ b/1Home.html
@@ -7,27 +7,55 @@
         <link rel="stylesheet" href="Homestyle.css" />
     </head>
     <body>
-        <header>
-            <h2> Hi, I am</h2>
-            <h1>Gopala Krishna Dangala</h1>
-            <h2>I'm a </h2>
-            <h1>Computer Sciences Student</h1>
-        <hr>
-        <p class="profile"><b>Personal Profile:</b><br><i>I am a BTech student in the Computer Science field. My main focus is to serve as a good asset to a 
-            reputed company. I am flexible, reliable and possess excellent time-keeping skills.
-            I am an enthusiastic, self-motivated and hardworking person. I work well in a team environment and also 
-            using my own initiative.</i></p>
-          <br><br><br><br><br><br><br><br>
+        <header>        
+        <div id="home">
+            <nav>
+                <p align="left">
+                    <a id="refresh" href="1Home.html">Gopala Krishna D</a>
+                    <a id="navbar" href="#home">Home</a>
+                    <a id="navbar" href="#about">About</a>
+                    <a id="navbar" href="#iframe">Details</a>
+                    <a id="navbar" href="#contact">Contact</a>
+                </p>
+            </nav>
+        </div>
+        <video autoplay loop alt="name gif">
+            <source src="https://va.media.tumblr.com/tumblr_rjmo69jDgE1zhp7k9_720.mp4" type="video/mp4">
+        </video>
         </header>
+    <main>
         <hr>
-        <main>
-            <div class="iframe">
-                <iframe  width="1000" height="1000" src="Embeded.html" alt="A box showing different pages of "> PORTFOLIO</iframe>
-            </div>
+            <p id="about"><b>About me:</b><br><br>
+                <i>I am a BTech student 
+                in the Computer Science field. My main focus is to serve as a good 
+                asset to a reputed company. I am flexible, and reliable and possess 
+                excellent time-keeping skills. I am an enthusiastic, self-motivated 
+                and hardworking person. I work well in a team environment and I also 
+                use my initiative whenever required.<br>
+                I am a passionate person who pursues his dreams, works hard and is 
+                results-oriented.I constantly work on improving myself to achieve the 
+                best version.</i>
+            </p>
+        <hr>
+            <p id="iframe" align="center">
+                <p class="inside">
+                    Select from below to know more
+                </p>
+                <iframe  width="1000" height="1000" src="Embeded.html" alt="A box showing different pages of"></iframe>
+            </p>
             </hr>
-            <h3 align="center">Contact info.</h3>
-            <p align="center"> E-Mail: gopalakrishna.1d@gmail.com <br>
-                LinkedIn: <a href="https://www.linkedin.com/in/gopala-krishna-d-5516701b3/" target="_blank">@gopala-krishna-d</a></p>
+            <h3 align="center"><span>Contact me.</span></h3>
+            <p id=contact"" align="center">
+                <a href="https://www.linkedin.com/in/gopala-krishna-d-5516701b3/" target="_blank" placeholder="LINKEDIN=@gopala-krishna-d">
+                    <img id="contact" src="https://www.freeiconspng.com/thumbs/linkedin-logo-png/displaying-19-gallery-images-for-linkedin-logo-png-25.png">
+                </a>
+                <a href="https://twitter.com/g0pa1kr1shna" target="_blank" placeholder="TWITTER=@g0palakr1shna">
+                    <img id="contact" src="https://s22.q4cdn.com/529358580/files/design/icons/twitter.png">
+                </a>
+                <a href="https://github.com/gopalakrishna1d" target="_blank" placeholder="GitHub">
+                    <img id="contact" src="https://logodix.com/logo/64439.png">
+                </a>
+            </p>
             <br>
         </main>
     </body>
