Final Output - Regular maintanence should make the site better

--- a/1Home.html
+++ b/1Home.html
@@ -19,13 +19,15 @@
                 </p>
             </nav>
         </div>
-        <video autoplay loop alt="name gif">
+        <div id="name">
+        <video autoplay loop >
             <source src="https://va.media.tumblr.com/tumblr_rjmo69jDgE1zhp7k9_720.mp4" type="video/mp4">
         </video>
+        </div>
         </header>
-    <main>
+        <main>
         <hr>
-            <p id="about"><b>About me:</b><br><br>
+            <p id="about" class="about"><b>About me:</b><br><br>
                 <i>I am a BTech student 
                 in the Computer Science field. My main focus is to serve as a good 
                 asset to a reputed company. I am flexible, and reliable and possess 
