--- a/Ach2Page.html
+++ b/Ach2Page.html
@@ -18,30 +18,29 @@
         </nav>
       </header>
       <main>
-        <h1 align="center"> Achievements</h1>
-        <h4><u>Hackathons</u></h4>
-        <p><b>1. Organized by Power-To-Fly & Sponsored by American Expressq</b></p>
-           <p> -May 2022<br>
+        <h1 align="center"><span>Achievements</span></h1>
+        <h4><span><u>Hackathons</u></span></h4>
+        <p><span><b>
+          <i>1. Organized by Power-To-Fly & Sponsored by American Express</i>
+        </b></span></p>
+        <p><span>-May 2022<br>
             -Won in a mini event and won.<br>
             -Learnt about quick planning and execution.<br>
-            </p>
-            <p>
-            <hr>
-            <b>Participated in cultural activities in School and College level.</b><br>
+        </span></p>
+        <hr>
+        <h4><span><u>Other Achievements</u></span></h4>
+        <p><span>
+        <b>Participated in cultural activities in School and College level.</b><br>
             -Appreciated for volunteering and active participation.<br>
             -Have experimented with anchoring skills and hosting events.
-             </p>
-             <br>
+        </span></p>
+            <br>
             <br><br>
             <br><br>
             <br><br>
             <br><br>
             <br>
         <button type="button"><a href="1Home.html">CLICK HERE FOR HOME SCREEN</button>
-            <br><br>
-            <br><br>
-            <br><br>
-            <br>
         </main>
         </body>
 </html>
