--- a/HobPage.html
+++ b/HobPage.html
@@ -18,24 +18,23 @@
       </nav>
     </header>
     <main>
-      <h1 align="center">Hobbies & Interests</h1>
-        <p>Photography<br>
-          Story writing<br>
-          Singing<br>
-          Playing Guitar<br>
-          Travelling<br>
-          Photo and Video Editing<br>
-          Listening to music<br>
-          Reading Books<br>
-          Playing Video Games<br>
-          Interior Designing<br>
-          Career coaching</p>
-        <br><br><br>
+      <h1 align="center"><span>Hobbies & Interests</span></h1>
+          <p><span>Photography</span></p>
+          <p><span>Story Writing</span></p>
+          <p><span>Book Reading</span></p>
+          <p><span>Singing</span></p>
+          <p><span>Guitar Playing</span></p>
+          <p><span>Travelling</span></p>
+          <p><span>Photo and video Editing</span></p>
+          <p><span>Listening to Music</span></p>
+          <p><span>Video Games: Playing and Making</span></p>
+            <br><br><br>
             <br><br>
             <br><br>
             <br><br>
         <button type="button"><a href="Hob2Page.html" target="_blank">CLICK HERE FOR FULL SCREEN</a></button>
-        <br>
+        <br> <br><br>
+        <br><br>
     </main>
   </body>
 </html>
