--- a/ProPage.html
+++ b/ProPage.html
@@ -18,14 +18,20 @@
         </nav>
       </header>
       <main>
-        <h1 align="center">Projects</h1>
-            <h2>Budget App</h2>
-            <p>
+        <h1 align="center"><span>Projects</span></h1>
+        <h2><span>Heart Disease Prediction using Machine Learning <small>(Academic Mini-Project 2022)</small></span></h2>
+        <p><span>
+            -Helps the user to predict if he/she has a heart related disease.<br>
+            -Uses Machine Learning Algorithms to refer the dataset and points out the chances of a heart disease.<br>
+        </span></p>
+        <hr>
+        <h2><span>Budget App <small>(Personal Project-2022)</small></span></h2>
+            <p><span>
                 -Helps the user to know about his income and expenses.<br>
                 -Keeps track of unwanted leaks from his pocket.<br>
                 -Gives suggestions on how to save money, where to avoide wasting and
-                 how else to save best.
-            </p>
+                how else to save best.
+            </span></p>
             <br>
             <br><br>
             <br><br>
