--- a/Exp2Page.html
+++ b/Exp2Page.html
@@ -19,8 +19,6 @@
       </header>
       <main>
         <div class="info">
-        <h1 align="center">I am a Computer Sciences Student</h1>
-        <hr>
         <h2 class="exp"><span>EXPERIENCE<small>(Technical)</small>: <i>Fresher</i></span></h2><br><br>
         <hr>
         <h2 class="exp"><span>EXPERIENCE<small>(Volunteering)</small>:</span></h2>
@@ -37,11 +35,12 @@
             <p>- The work given was not hard but it was time consuming. 
                 I did my best to give the quality output in the limited time.</p>
             <P> - This internship has taught me that work can be fun too.</P>
-            <br><br>
-            <button type="button"><a href="1Home.html">CLICK HERE FOR HOME PAGE</a></button>
-            <br><br><br>
+            <br><br><br><br><br>
             <br><br>
             <br><br>
+            <button type="button">
+              <a href="1Home.html">CLICK HERE FOR HOME PAGE</a>
+            </button>
         </div>
       </main>
   </body>
