--- a/1Home.html
+++ b/1Home.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utl-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="utf-8"/>
         <title>Gopala Krishna D | Personal Website </title>
         <link rel="stylesheet" href="Homestyle.css" />
     </head>
@@ -20,8 +19,8 @@
             </nav>
         </div>
         <div id="name">
-        <video autoplay loop >
-            <source src="https://va.media.tumblr.com/tumblr_rjmo69jDgE1zhp7k9_720.mp4" type="video/mp4">
+        <video autoplay muted loop>
+            <source src="https://va.media.tumblr.com/tumblr_rjo3z8njKF1zhp7k9_720.mp4" type="video/mp4">
         </video>
         </div>
         </header>
@@ -39,12 +38,12 @@
                 best version.</i>
             </p>
         <hr>
-            <p id="iframe" align="center">
-                <p class="inside">
-                    Select from below to know more
-                </p>
-                <iframe  width="1000" height="1000" src="Embeded.html" alt="A box showing different pages of"></iframe>
+            <p id="iframe" class="inside">
+                Select from below to know more
             </p>
+            <div align="center">
+                <iframe  width="800" height="700" src="Embeded.html" alt="A box showing different pages"></iframe>
+            </div>
             </hr>
             <h3 align="center"><span>Contact me.</span></h3>
             <p id=contact"" align="center">
