Home Page Finished

--- a/Edu2Page.html
+++ b/Edu2Page.html
@@ -58,7 +58,7 @@
                     <p>-From Coursera | 2022 (On-going)<br></p>
         </ul>
         </div>
-        <button type="button"><a href="1Home.html">CLICK HERE FOR HOME PAGE</a></button>
+        <button type="button"><a href="Home.html">CLICK HERE FOR HOME PAGE</a></button>
        </div>
       </main>
     </body>
