--- a/Hob2Page.html
+++ b/Hob2Page.html
@@ -33,7 +33,7 @@
                 <br><br>
                 <br><br>
                 <br><br>
-                <button type="button"><a href="1Home.html">CLICK HERE FOR HOME PAGE</a></button>
+                <button type="button"><a href="Home.html">CLICK HERE FOR HOME PAGE</a></button>
                 <br> <br><br>
                 <br><br>
       </main>
