--- a/Exp2Page.html
+++ b/Exp2Page.html
@@ -39,7 +39,7 @@
             <br><br>
             <br><br>
             <button type="button">
-              <a href="1Home.html">CLICK HERE FOR HOME PAGE</a>
+              <a href="Home.html">CLICK HERE FOR HOME PAGE</a>
             </button>
         </div>
       </main>
