--- a/Skills2Page.html
+++ b/Skills2Page.html
@@ -61,7 +61,7 @@
             <br><br>
             <br><br>
             <br>
-      <button type="button"><a href="1Home.html">CLICK HERE FOR HOME PAGE</a></button>
+      <button type="button"><a href="Home.html">CLICK HERE FOR HOME PAGE</a></button>
       </main>
     </body>
 </html>
