--- a/Pro2Page.html
+++ b/Pro2Page.html
@@ -37,7 +37,7 @@
             <br><br>
             <br><br>
             <br><br>
-            <button type="button"><a href="Home.html">CLICK HERE FOR HOME PAGE</a></button>
+            <button type="button"><a href="2Home.html">CLICK HERE FOR HOME PAGE</a></button>
             <br><br><br>
             <br><br>
         </main>
