--- a/3Home.html
+++ b/3Home.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>Gopala Krishna D | Personal Website </title>
-        <link rel="stylesheet" href="Homestyle.css" />
+        <link rel="stylesheet" href="Home1style.css" />
     </head>
     <body>
         <header>        
