--- a/Ach2Page.html
+++ b/Ach2Page.html
@@ -24,8 +24,9 @@
           <i>1. Organized by Power-To-Fly & Sponsored by American Express</i>
         </b></span></p>
         <p><span>-May 2022<br>
-            -Won in a mini event and won.<br>
-            -Learnt about quick planning and execution.<br>
+          -participated in a mini event and won.<br>
+          -Learnt about quick planning and execution.<br>
+          -Contributed (front-end) in making an application for sharing and selling NFT's.<br>
         </span></p>
         <hr>
         <h4><span><u>Other Achievements</u></span></h4>
@@ -40,7 +41,7 @@
             <br><br>
             <br><br>
             <br>
-        <button type="button"><a href="3Home.html">CLICK HERE FOR HOME SCREEN</button>
+        <button type="button"><a href="Home.html">CLICK HERE FOR HOME SCREEN</button>
         </main>
         </body>
 </html>
