--- a/AchPage.html
+++ b/AchPage.html
@@ -24,8 +24,9 @@
           <i>1. Organized by Power-To-Fly & Sponsored by American Express</i>
         </b></span></p>
         <p><span>-May 2022<br>
-            -Won in a mini event and won.<br>
-            -Learnt about quick planning and execution.<br>
+          -participated in a mini event and won.<br>
+          -Learnt about quick planning and execution.<br>
+          -Contributed (front-end) in making an application for sharing and selling of NFT's.<br>
         </span></p>
         <hr>
         <h4><span><u>Other Achievements</u></span></h4>
