--- a/Ach2Page.html
+++ b/Ach2Page.html
@@ -10,11 +10,11 @@
       <header>
         <nav>
             <a class="cat" href="Exp2Page.html">Experience</a>
+            <a class="cat" href="Pro2Page.html">Projects</a>
             <a class="cat" href="Edu2Page.html">Education</a>
             <a class="cat" href="Skills2Page.html">Skills</a>
-            <a class="cat" href="Ach2Page.html">Achievements</a>
             <a class="cat" href="Hob2Page.html">Hobbies</a>
-            <a class="cat" href="Pro2Page.html">Projects</a>
+            <a class="cat" href="Ach2Page.html">Achievements</a>
         </nav>
       </header>
       <main>
@@ -41,7 +41,7 @@
             <br><br>
             <br><br>
             <br>
-        <button type="button"><a href="Home.html">CLICK HERE FOR HOME SCREEN</button>
+        <button type="button"><a href="Home.html">CLICK HERE FOR HOME PAGE</button>
         </main>
         </body>
 </html>
