--- a/Exp2Page.html
+++ b/Exp2Page.html
@@ -9,17 +9,23 @@
   <body>
       <header>
         <nav>
-            <a class="cat" href="Exp2Page.html">Experience</a>
-            <a class="cat" href="Edu2Page.html">Education</a>
-            <a class="cat" href="Skills2Page.html">Skills</a>
-            <a class="cat" href="Ach2Page.html">Achievements</a>
-            <a class="cat" href="Hob2Page.html">Hobbies</a>
-            <a class="cat" href="Pro2Page.html">Projects</a>
+          <a class="cat" href="Exp2Page.html">Experience</a>
+          <a class="cat" href="Pro2Page.html">Projects</a>
+          <a class="cat" href="Edu2Page.html">Education</a>
+          <a class="cat" href="Skills2Page.html">Skills</a>
+          <a class="cat" href="Hob2Page.html">Hobbies</a>
+          <a class="cat" href="Ach2Page.html">Achievements</a>
         </nav>
       </header>
       <main>
         <div class="info">
         <h2 class="exp"><span>EXPERIENCE<small>(Technical)</small>: <i>Fresher</i></span></h2><br><br>
+        <h3><i><u>Backend Developer Intern</u></i></h3>
+         <p><span><b>MATDUN Labs India Pvt Ltd. | Feb 2023 -  (Present) </b></span></p>
+            <p> - I contributed to vital backend features, developed APIs, and optimized database performance.</p> 
+            <p> - I collaborated with a skilled team, honing my skills in NodeJS, Django, Flask, PostgreSQL, Postman, Docker and so on.</p> 
+            <p> - This experience provided insights into Agile practices, teamwork, and the impact of my work on the final product, 
+              fueling my passion for software development in a dynamic startup environment.</p>
         <hr>
         <h2 class="exp"><span>EXPERIENCE<small>(Volunteering)</small>:</span></h2>
         <h3><i><u>Teaching Intern</u></i></h3>
