--- a/ExpPage.html
+++ b/ExpPage.html
@@ -10,16 +10,22 @@
       <header>
         <nav>
             <a class="cat" href="ExpPage.html">Experience</a>
+            <a class="cat" href="ProPage.html">Projects</a>
             <a class="cat" href="EduPage.html">Education</a>
             <a class="cat" href="SkillsPage.html">Skills</a>
-            <a class="cat" href="AchPage.html">Achievements</a>
             <a class="cat" href="HobPage.html">Hobbies</a>
-            <a class="cat" href="ProPage.html">Projects</a>
+            <a class="cat" href="AchPage.html">Achievements</a>
         </nav>
       </header>
       <main>
         <div class="info">
         <h1 class="exp"><span>EXPERIENCE<small>(Technical)</small>: <i>Fresher</i></span></h1><br><br>
+        <h3><i><u>Backend Developer Intern</u></i></h3>
+         <p><span><b>MATDUN Labs India Pvt Ltd. | Feb 2023 -  (Present) </b></span></p>
+            <p> - I contributed to vital backend features, developed APIs, and optimized database performance.</p> 
+            <p> - I collaborated with a skilled team, honing my skills in NodeJS, Django, Flask, PostgreSQL, Postman, Docker and so on.</p> 
+            <p> - This experience provided insights into Agile practices, teamwork, and the impact of my work on the final product, 
+              fueling my passion for software development in a dynamic startup environment.</p>
         <hr>
         <h1 class="exp"><span>EXPERIENCE<small>(Volunteering)</small>:</span></h1>
         <h3><i><u>Teaching Intern</u></i></h3>
