--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,7 @@
         <title>Gopala Krishna D | Personal Website </title>
         <link rel="stylesheet" href="Homestyle.css" />
     </head>
-    <body>
+    <body oncontextmenu="return false;">
         <header>        
         <div id="home">
             <nav>
@@ -21,8 +21,8 @@
             </nav>
         </div>
         <div id="name">
-        <video autoplay muted loop>
-            <source src="images/namevid.mp4" type="video/mp4">
+        <video autoplay muted loop playsinlinestyle="pointer-events: none;">
+            <source src="images/namevid.mp4"  type="video/mp4">
         </video>
         </div>
         </header>
