--- a/Edu2Page.html
+++ b/Edu2Page.html
@@ -10,23 +10,23 @@
       <header>
         <nav>
             <a class="cat" href="Exp2Page.html">Experience</a>
+            <a class="cat" href="Pro2Page.html">Projects</a>
             <a class="cat" href="Edu2Page.html">Education</a>
             <a class="cat" href="Skills2Page.html">Skills</a>
-            <a class="cat" href="Ach2Page.html">Achievements</a>
             <a class="cat" href="Hob2Page.html">Hobbies</a>
-            <a class="cat" href="Pro2Page.html">Projects</a>
+            <a class="cat" href="Ach2Page.html">Achievements</a>
         </nav>
       </header>
       <main>
        <div class="info">
         <h2 class="tit">EDUCATION</h2>
         <hr>
-            <h1><span><i>Formal Education</i></span></h1>
             <h3><u class="edulevel">BTech- Computer Science and Engineering(Pursuing)</u></h3>
             <b>St Mary's Engineering College 2019-2023 <br>Affiliated to JNTU-Hyderabad </b>
             <p>-Academic Excellence in Information Science, English and Mathematics.<br>
-                -Good Performance in social and cultural activities.<br>
-                -Current CGPA= 6.46
+                -Good Performance in social and cultural activities and held leadership roles.<br>
+                -Recognized for exceptional presentation skills.<br>
+                -Finished academically required mini and major projects.
             </p>
             <h3><u class="edulevel">Intermediate (12th)</u></h3>
             <b><i>Sri Gayatri Junior College 2017-2019 </i></b>
@@ -39,23 +39,13 @@
                 -Passed out with a 9.3 GPA 
             </p>
         <hr>
-        <h1><span><i>Informal Education</i></span></h1>
         <div class="cert">
         <h2><i><u>Certification Courses:</u></i></h2>
         <ul>    <li><b>Video Game Development:</b></li>
-                    <p>-From XAMK Open University (IVGC) –<i>Finland</i><br>
-                       -August 2021 to July 2022<br>
-                    </p>
-                <li><b>DevOps on AWS Specialization: (1/4 Courses)</b></li> 
-                    <p>-From Coursera | 2022 (On-going)<br>
-                       -Cloud Computing and further knowledge acquired.
-                    </p>
-                <li><b>IBM & Darden Digital Strategy Specialization: (2/6 Courses)</b></li>
-                    <p>-From Coursera | 2022 (On-going)<br>
-                       -Artificial intelligence and Machine learning basics acquired.
-                    </p>
-                <li><b>Google Data Analytics Professional Certificate: (1/8 Courses)</b></li>
-                    <p>-From Coursera | 2022 (On-going)<br></p>
+                <p>-From XAMK Open University (IVGC) –<i>Finland</i><br>
+                    -August 2021 to July 2022<br>
+                    -Learnt Unity3D, Krita, Blender
+                </p>
         </ul>
         </div>
         <button type="button"><a href="Home.html">CLICK HERE FOR HOME PAGE</a></button>
