--- a/Skills2Page.html
+++ b/Skills2Page.html
@@ -9,12 +9,12 @@
     <body>
       <header>
         <nav>
-            <a class="cat" href="Exp2Page.html">Experience</a>
-            <a class="cat" href="Edu2Page.html">Education</a>
-            <a class="cat" href="Skills2Page.html">Skills</a>
-            <a class="cat" href="Ach2Page.html">Achievements</a>
-            <a class="cat" href="Hob2Page.html">Hobbies</a>
-            <a class="cat" href="Pro2Page.html">Projects</a>
+          <a class="cat" href="Exp2Page.html">Experience</a>
+          <a class="cat" href="Pro2Page.html">Projects</a>
+          <a class="cat" href="Edu2Page.html">Education</a>
+          <a class="cat" href="Skills2Page.html">Skills</a>
+          <a class="cat" href="Hob2Page.html">Hobbies</a>
+          <a class="cat" href="Ach2Page.html">Achievements</a>
         </nav>
       </header>
       <main>
@@ -25,35 +25,29 @@
         <hr>
         <h3><u>Computer Skills</u></h3>
         <ol>
-            <li><b>Programming Languages:</b></li>
-            C, C++, C#, Java, Python,<br>
-            Web Development (HTML, PHP, CSS)<br>
-            <br>
-            <li><b>Database:</b></li>
-            MySQL<br>
+          <li><b>Programming Languages:</b></li>
+          C, C++, C#, JavaScript, Python,<br>
+          <b>Web Development:</b> HTML, CSS, Express, React<br>
+          <b>Frameworks: </b> Django, NodeJS, Flask, FastAPI<br>
+          <br>
+          <li><b>Database:</b></li>
+            MySQL, PostgreSQL, MS-SQL<br>
             <br>
             <li><b>IDEs:</b></li>
-            VS Code, Eclipse, Jupyter Notebook<br>
+            VS Code, Eclipse, Jupyter Notebook, PyCharm<br>
             <br>
             <li><b>Other Software skills:</b></li>
-            Microsoft Word, Excel, Android Studio, Unity Engine, Git Hub, 2D&3D<br>
-            Animation using Blender and Krita, Graphic designing, Photo & Video Editing(Adobe software)<br>
-        </ol>
-        <hr>
-        <h3><u>Personal Skills</u></h3>
-        <ol>
-            <li>Project and Team Management</li>
-            <li>Strategic Planning and Execution</li>
-            <li>Multitasking & Time management</li>
-            <li>Communication skills</li>
-            <li>Problem Solving</li>
+            Microsoft 360, Unity Engine, Git, Gitlab, Github<br>
+            Animation using Blender and Krita, Canva, Graphic designing, Photo & Video Editing, Illustrations(Adobe software)<br>
         </ol>
         <hr>
        <h4><u>Languages Known:</u></h4>
        <p>
-        -English (5/5)<br>
-        -Telugu (5/5)<br>
-        -Hindi (4.5/5)
+        <ul>
+          <li>English (5/5)</li>
+          <li>Telugu (5/5)</li>
+          <li>Hindi (4.5/5)</li>
+        </ul>
        </p>
        <br>
             <br><br>
